2007-09-04  Katsumi Yamaoka  <yamaoka@jpl.org>

	* eword-encode.el (make-ew-rword, ew-rword-text, ew-rword-charset)
	(ew-rword-encoding, ew-rword-type): Use new-style backquotes.

	* hmac-def.el (define-hmac-function): Use new-style backquotes.

	* md4.el (md4-make-step): Use new-style backquotes.

2007-08-23  Stefan Monnier  <monnier@iro.umontreal.ca>

	* sha1-el.el: Fix up comment style.
	(sha1-F0, sha1-F1, sha1-F2, sha1-F3, sha1-S1, sha1-S5, sha1-S30)
	(sha1-OP, sha1-add-to-H): Use new-style backquotes.

	* hex-util.el: Fix up comment style.
	(hex-char-to-num, num-to-hex-char): Use new-style backquotes.

2007-06-18  Wencheng Fang  <wencheng.fang@spherenet.co.jp>

	* mel.el (mime-write-decoded-region): Define method function that
	uses built-in base64-decode-region.  [cf. <emacs-mime-ja:02169>]

2006-12-20  MORIOKA Tomohiko  <tomo@kanji.zinbun.kyoto-u.ac.jp>

	* README.ja, README.en (Installation): Update required version of
	APEL to 10.7 or later.

	* FLIM-CFG (PACKAGEDIR): Use
	`install-get-default-package-directory'.

2006-12-13  Katsumi Yamaoka  <yamaoka@jpl.org>

	* FLIM-CFG (PACKAGEDIR): Avoid an error with Emacs.

2006-12-12  Katsumi Yamaoka  <yamaoka@jpl.org>

	* FLIM-MK (compile-flim-package): Use
	batch-update-directory-autoloads if it is available instead of
	batch-update-directory.

2006-12-11  Katsumi Yamaoka  <yamaoka@jpl.org>

	* FLIM-CFG (PACKAGEDIR): Check for
	(early|late|last)-package-hierarchies and configure-package-path
	as well as (early|late|last)-packages.

2006-06-15  Yoichi NAKAYAMA  <yoichi@geiin.org>

	* smtp.el (smtp-submit-package): Ignore error in
	`smtp-primitive-quit' where SMTP mail transaction is completed.

2006-06-12  Hiroya Murata  <lapis-lazuli@pop06.odn.ne.jp>

	* mel-b-ccl.el (base64-ccl-insert-encoded-file): Use
	`insert-file-contents-as-binary' instead of `insert-file-contents'.

	* mel-q-ccl.el (quoted-printable-ccl-insert-encoded-file):
	Likewise.

2006-02-18  Hiroya Murata  <lapis-lazuli@pop06.odn.ne.jp>
